# ChangeLog for dev-perl/Term-ReadLine-Perl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Term-ReadLine-Perl/ChangeLog,v 1.42 2013/09/14 13:58:04 idella4 Exp $

*Term-ReadLine-Perl-1.30.300-r1 (14 Sep 2013)

  14 Sep 2013; Ian Delaney <idella4@gentoo.org>
  +Term-ReadLine-Perl-1.30.300-r1.ebuild:
  revbump -> EAPI 5

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  31 Mar 2012; Torsten Veller <tove@gentoo.org>
  -Term-ReadLine-Perl-1.03.02.ebuild:
  Cleanup

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  ia64/s390/sh/sparc stable wrt #396953

  02 Mar 2012; Brent Baude <ranger@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  Marking Term-ReadLine-Perl-1.30.300 ppc64 for bug 396953

  25 Feb 2012; Tobias Klausmann <klausman@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  Stable on alpha, bug #396953

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  x86 stable wrt bug #396953

  10 Feb 2012; Markus Meier <maekke@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  arm stable, bug #396953

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  Stable for HPPA (bug #396953).

  06 Feb 2012; Brent Baude <ranger@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  Marking Term-ReadLine-Perl-1.30.300 ppc for bug 396953

  03 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  Term-ReadLine-Perl-1.30.300.ebuild:
  Stable for amd64, wrt bug #396953

*Term-ReadLine-Perl-1.30.300 (14 Jan 2011)

  14 Jan 2011; Torsten Veller <tove@gentoo.org>
  -Term-ReadLine-Perl-1.03.03.ebuild, +Term-ReadLine-Perl-1.30.300.ebuild:
  Convert ebuild version

  14 Jan 2010; Fabian Groffen <grobian@gentoo.org>
  Term-ReadLine-Perl-1.03.03.ebuild:
  Transfer Prefix keywords

*Term-ReadLine-Perl-1.03.03 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>